--- a/final_paper.Rmd
+++ b/final_paper.Rmd
@@ -8,6 +8,10 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(plotly)
+library(knitr)
+data <- read.csv("./project/data/clean_data.csv")
+source('./project/regressionFunctionsForShiny.R')
+source('./project/CovariateExplanations.R')
 ```
 
 ##Abstract
@@ -82,25 +86,23 @@ For this project we decided to do a log regression on several combinations of co
 
 ###The Technique
 
-As stated previously, our final models of choice relied on several factors, including context. This meant that instead of streamlining the process of finding the lowest p value combinations/best ROC curve fit for each outcome of interest by writing a program to do it, we decided to work through combinations by hand and consider the implications of each. For example, gender seemed to have a large influence on the outcome of interest, but we couldn't very well suggest that each office become entirely female. Our goal was to provide concrete recommendations based on the data, and for us that required taking context into consideration for each covariate. This meant that we developed a tool to explore the data, the p values and the goodness of fit of the model. You can see a screenshot of the tool in Figure 3, and look at the site here. 
+As stated previously, our final models of choice relied on several factors, including context. This meant that instead of streamlining the process of finding the lowest p value combinations/best ROC curve fit for each outcome of interest by writing a program to do it, we decided to work through combinations by hand and consider the implications of each. For example, gender seemed to have a large influence on the outcome of interest, but we couldn't very well suggest that each office become entirely female. Our goal was to provide concrete recommendations based on the data, and for us that required taking context into consideration for each covariate. This meant that we developed a tool to explore the data, the p values and the goodness of fit of the model. You can see a screenshot of the tool in Figure 3, and look at the site [here](https://rosemerryberry.shinyapps.io/mental-health2/). 
 
 ##Results - The major insights resulting from your research.
 
 The following results are the covariates of interest that we found for each outcome considered in this paper. Their respective charts can be found in the appendix.
 
-[[[ALSO going to put in figure references]]]
-
 ###Ease of Communication
 
-Family_history, leave, and seek_help have the biggest effect on our outcome of interest, ease of communication. The p-values for these covariates range from essentially 0 to 389mu, which is also essentially 0. This shows a very strong correlation. After finding these covariates of interest, we are able to speculate about why they have an effect on ease of communication. The questions asked were "Do you have a family history of mental illness?", "How easy is it for you to take medical leave for a mental health condition?", and "Does your employer provide resources to learn more about mental health issues and how to seek help?". These questions seem to be fairly intuitive in the relation to ease of communication - perhaps because the subject has family history of mental health ilness, they know of resoures and feel more comfortable discussing the fact. Additionally, if an employer provides mental health resources and it is easy to take medical leave because of a mental health condition, the subject may become more common and less personal in the workplace, allowing the subject to talk freely about mental health.
+Family_history, leave, and seek_help have the biggest effect on our outcome of interest, ease of communication. The p-values for these covariates range from essentially 0 to 389mu, which is also essentially 0 (Figure 4.1). This shows a very strong correlation (Figure 4.2). After finding these covariates of interest, we are able to speculate about why they have an effect on ease of communication. The questions asked were "Do you have a family history of mental illness?", "How easy is it for you to take medical leave for a mental health condition?", and "Does your employer provide resources to learn more about mental health issues and how to seek help?". These questions seem to be fairly intuitive in the relation to ease of communication - perhaps because the subject has family history of mental health ilness, they know of resoures and feel more comfortable discussing the fact. Additionally, if an employer provides mental health resources and it is easy to take medical leave because of a mental health condition, the subject may become more common and less personal in the workplace, allowing the subject to talk freely about mental health.
 
 ###Ease of Access
 
-Treatment, no_employee, and anonymity have the biggest effect on our outcome of interest, ease of access to mental health care. The p-values for these covariates range from essentially 0 to 0.027, which show a strong correlation. The questions asked were "Have you sought treatment for a mental health condition?", "How many employees does your company or organization have?", and "Is your anonymity protected if you choose to take advantage of mental health or substance abuse treatment resources?". Some of these questions intuitivly make sense immediately - anonymity provides privacy and so subjects may feel safer to access mental health care. If the subject has already sought treatment for a mental health condition, they will be more familiar with attaining the help they desire. Number of employees seems the least related to accessing mental health care, but perhaps in a large company, the subject knows more people who have used mental health services and then better understands the opportunities to gain access to mental health care. On the other hand, if the subject works at a small company, they may be closer with the other employees and have a more diverse dialogue that includes the subject of mental health.
+Treatment, no_employee, and anonymity have the biggest effect on our outcome of interest, ease of access to mental health care. The p-values for these covariates range from essentially 0 to 0.027 (Figure 5.1), which show a strong correlation (Figure 5.1). The questions asked were "Have you sought treatment for a mental health condition?", "How many employees does your company or organization have?", and "Is your anonymity protected if you choose to take advantage of mental health or substance abuse treatment resources?". Some of these questions intuitivly make sense immediately - anonymity provides privacy and so subjects may feel safer to access mental health care. If the subject has already sought treatment for a mental health condition, they will be more familiar with attaining the help they desire. Number of employees seems the least related to accessing mental health care, but perhaps in a large company, the subject knows more people who have used mental health services and then better understands the opportunities to gain access to mental health care. On the other hand, if the subject works at a small company, they may be closer with the other employees and have a more diverse dialogue that includes the subject of mental health.
 
 ###Social Acceptance
 
-Coworkers, leave, supervisor, and obs_consequence have the biggest effect on our outcome of interest, social acceptance of mental health care. The p-values for these covariates range from essentially 0 to 0.98 (observed consequence). This is an extremely high p-value, but it is important to notice that when the observed consequence is selected as a covariate, the other covariate's p-values decrease significantly - the next highest is coworkers at 0.48. It is likely so high because we used it in our calculation of social acceptance. The questions asked were "Would you be willing to discuss a mental health issue with your coworkers?", "How easy is it for you to take medical leave for a mental health condition?", "Would you be willing to discuss a mental health issue with your direct supervisor(s)?" and "Have you heard of or observed negative consequences for coworkers with mental health conditions in your workplace?". The covariates of coworker and supervisor are very relevent to this outcome because they represent the social aspect of the office. Leave plays a role because the coworkers are willing to fill in for the work you are missing because they understand and accept the needs of mental health conditions. Observed consequence is relevent because it also has to do with the social aspect of the work environment.
+Coworkers, leave, supervisor, and obs_consequence have the biggest effect on our outcome of interest, social acceptance of mental health care. The p-values for these covariates range from essentially 0 to 0.98 (observed consequence) (Figure 6.1, Figure 6.2). This is an extremely high p-value, but it is important to notice that when the observed consequence is selected as a covariate, the other covariate's p-values decrease significantly - the next highest is coworkers at 0.48. It is likely so high because we used it in our calculation of social acceptance. The questions asked were "Would you be willing to discuss a mental health issue with your coworkers?", "How easy is it for you to take medical leave for a mental health condition?", "Would you be willing to discuss a mental health issue with your direct supervisor(s)?" and "Have you heard of or observed negative consequences for coworkers with mental health conditions in your workplace?". The covariates of coworker and supervisor are very relevent to this outcome because they represent the social aspect of the office. Leave plays a role because the coworkers are willing to fill in for the work you are missing because they understand and accept the needs of mental health conditions. Observed consequence is relevent because it also has to do with the social aspect of the work environment.
 
 ##Discussion - What are the implications of your results?
 
@@ -127,6 +129,87 @@ As a whole, we do believe our recommendations come from a data driven analysis a
 
 ##Appendix
 
-figure 1 is going to be the table of encodings from our site
-figure 2 is going to be our tables showing the outcome of interest "formula"
-figure 3 is going to be a screenshot of the interactive tool
+###Figure 1
+
+```{r echo=FALSE}
+kable(getCovariateDefinitions() %>% select(-definitions))
+```
+
+###Figure 2
+
+####Ease of Communication
+*IF*      
+benefits == 1 &   
+care_options == 1 &   
+wellness_program == 1 &   
+seek_help == 1   
+*THEN*     
+ease of communication is TRUE   
+
+####Ease of Access
+*IF*   
+supervisor > 1 &   
+mental_health_interview = 1 OR phys_health_interview = 2 &   
+mental_health_consequence = 1 OR cphys_health_consequence = 2   
+*THEN*   
+ease of access is TRUE
+
+####Social Acceptance
+*IF*   
+benefits == 1 &   
+care_options == 1 &   
+wellness_program == 1 &   
+seek_help == 1   
+*THEN*   
+ease of communication is TRUE
+                
+###Figure 3
+![Screen capture of the interactive tool](./screenshot.png)
+
+###Figure 4.1
+```{r echo=FALSE}
+dataFrame <- data
+covariates <- c('family_history', 'leave', 'seek_help')
+outcome <- 'obs_consequence'
+    
+pVals <- getPVals(dataFrame, covariates, outcome)
+
+createHistogram(pVals)
+```
+
+###Figure 4.2
+```{r echo=FALSE}
+
+```
+
+###Figure 5.1
+```{r echo=FALSE}
+dataFrame <- data
+covariates <- c('treatment', 'no_employees', 'anonymity')
+outcome <- 'care_accessibility'
+    
+pVals <- getPVals(dataFrame, covariates, outcome)
+    
+createHistogram(pVals)
+```
+
+###Figure 5.2
+```{r echo=FALSE}
+
+```
+
+###Figure 6.1
+```{r echo=FALSE}
+dataFrame <- data
+covariates <- c('leave', "obs_consequence", "coworkers", "supervisor")
+outcome <- 'social_acceptance'
+    
+pVals <- getPVals(dataFrame, covariates, outcome)
+    
+createHistogram(pVals)
+```
+
+###Figure 6.2
+```{r echo=FALSE}
+
+```
