--- a/final_paper.Rmd
+++ b/final_paper.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "Mental Health in the Workplace"
-author: "Rosemary Adams, Jessica Libman, Calvin Korver and Anushree Shukla   "
+author: "Rosemary Adams, Jessica Libman, Calvin Korver and Anushree Shukla"
 date: "3/11/2018"
-output: html_document
+output: 
+  html_document:
+    theme: "journal"
 ---
 
 ```{r setup, include=FALSE}
@@ -12,6 +14,7 @@ library(knitr)
 data <- read.csv("./project/data/clean_data.csv")
 source('./project/regressionFunctionsForShiny.R')
 source('./project/CovariateExplanations.R')
+source('./project/bestfit.R')
 ```
 
 ##Abstract
@@ -19,7 +22,7 @@ This paper details the strategy our group took to solve the question of what fac
 
 ##Introduction
 
-The problem space we are exploring in this paper is the significance of the social acceptance of mental health, and how that interacts with measures like ease of communication about mental health and ease of access to resources about mental health. This is significant because in a given year, typically one in five people in the USA alone will suffer from mental illness (1). It is an extremely prevalent form of human suffering that carries a much higher stigma than physically apparent injuries and illnesses, such as broken bones or cancer. As such, society in the USA is much less inclined to give those suffering from a mental illness the sort of leeway and understanding for recovery that they would for physical illnesses. This is apparent in insurance claims, company policies on leave, and even an employee's direct supervisor's policy. The purpose of this exploration is to use the data we found to identify signifcant factors of work life that impact the social acceptance, ease of access and ease of communication that one experiences in the work place, and then take those factors to make concrete recommendations that employers can use to make their offices more accessible to those with mental illness. This is the specific question of interest that we explored:  
+The problem space we are exploring in this paper is the significance of the social acceptance of mental health, and how that interacts with measures like ease of communication about mental health and ease of access to resources about mental health. This is significant because in a given year, typically one in five people in the USA alone will suffer from mental illness (Mental Health By The Numbers). It is an extremely prevalent form of human suffering that carries a much higher stigma than physically apparent injuries and illnesses, such as broken bones or cancer. As such, society in the USA is much less inclined to give those suffering from a mental illness the sort of leeway and understanding for recovery that they would for physical illnesses. This is apparent in insurance claims, company policies on leave, and even an employee's direct supervisor's policy. The purpose of this exploration is to use the data we found to identify signifcant factors of work life that impact the social acceptance, ease of access and ease of communication that one experiences in the work place, and then take those factors to make concrete recommendations that employers can use to make their offices more accessible to those with mental illness. This is the specific question of interest that we explored:  
 
 ####To what extent do different facets of interactions about mental health in the office contribute to the social acceptance of mental health?
 
@@ -70,7 +73,7 @@ The lack of awareness and inadequate training to provide mental health support i
 ###Data Cleaning
 When we originally procured the data, the first thing we did was trim responses out to just the ones we needed. There was an area for comments by the respondant that we removed, and we also removed country and state level data because of the large number of non responses. We had hoped to continue using age as a covaritate, but there were also a large number of non responses as well as responses that didn't make sense (extremely high numbers, negative values, and extremely small numbers).
 
-We then went about encoding all of the remaining responses into numeric values. We did this so we could easily calculate our outcomes of interest and run regressions of the data (See Figure 1).
+We then went about encoding all of the remaining responses into numeric values. We did this so we could easily calculate our outcomes of interest and run regressions of the data (Figure 1).
 
 We also decided to coerce some responses. These desicions were context based, for example, there were NA responses to the 'Are you self employed?' question. Because there were only about 10 non responses, we determined that these respondants were NOT self employed, because they indicated working at large companies in the 'How many employees does your company have?' question. Some questions, for example, 'Has your employer ever discussed mental health as part of an employee wellness program?' had the responses of 'yes', 'no', and 'don't know'. Due to the nature of the question, we were able to encode the 'dont' know' responses as 'no' responses, because if you had never experienced a mental health dicussion then your response could equally be no or don't know.
 
@@ -124,8 +127,9 @@ As a whole, we do believe our recommendations come from a data driven analysis a
 
 ##Works Cited
 
-1 https://www.nami.org/learn-more/mental-health-by-the-numbers 
-(anushrees source?) https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2649890/ 
+“Mental Health By The Numbers.” NAMI: National Alliance on Mental Illness, National Alliance on Mental Illness, www.nami.org/learn-more/mental-health-by-the-numbers.   
+
+[[[[MORE CITATIONA HERE]]]
 
 ##Appendix
 
@@ -179,7 +183,13 @@ createHistogram(pVals)
 
 ###Figure 4.2
 ```{r echo=FALSE}
+dataFrame <- data
+covariates <- c('family_history', 'leave', 'seek_help')
+outcome <- 'obs_consequence'
 
+model <- create_glm_model(covariates, dataFrame, outcome)
+
+p <- draw_best_fit(model, covariates, dataFrame, outcome)
 ```
 
 ###Figure 5.1
@@ -195,7 +205,13 @@ createHistogram(pVals)
 
 ###Figure 5.2
 ```{r echo=FALSE}
+dataFrame <- data
+covariates <- c('treatment', 'no_employees', 'anonymity')
+outcome <- 'care_accessibility'
 
+model <- create_glm_model(covariates, dataFrame, outcome)
+
+p <- draw_best_fit(model, covariates, dataFrame, outcome)
 ```
 
 ###Figure 6.1
@@ -211,5 +227,11 @@ createHistogram(pVals)
 
 ###Figure 6.2
 ```{r echo=FALSE}
+dataFrame <- data
+covariates <- c('leave', "obs_consequence", "coworkers", "supervisor")
+outcome <- 'social_acceptance'
 
+model <- create_glm_model(covariates, dataFrame, outcome)
+
+p <- draw_best_fit(model, covariates, dataFrame, outcome)
 ```
