--- a/final_paper.Rmd
+++ b/final_paper.Rmd
@@ -18,7 +18,7 @@ source('./project/bestfit.R')
 ```
 
 ##Abstract
-This paper details the strategy our group took to solve the question of what factors most influence the social acceptance of mental health in the work place, and suggestions we can make based on those findings. We developed three metrics to evaluate this question - social acceptance, ease of communication, and ease of access. We used logarithmic regression to evaluate the significance of different combinations of covariates for each outcome. We build an interactive tool where you could build a model, see the p values of each covariate, and assess the of fit of the model. Ultimately we can conclude that having open conversations about mental health in the abstract, allowing those who are suffering from it to remain anonymous if they choose, and allowing for leave to be taken to recover from mental illness are going to have the most impact in increasing the social acceptance of mental health.
+This paper details the strategy our group took to solve the question of what factors most influence the social acceptance of mental health in the work place, and suggestions we can make based on those findings. We developed three metrics to evaluate this question - social acceptance, ease of communication, and ease of access. We used logarithmic regression to evaluate the significance of different combinations of covariates for each outcome. We build an interactive tool where you could build a model, see the p-values of each covariate, and assess the of fit of the model. Ultimately we can conclude that having open conversations about mental health in the abstract, allowing those who are suffering from it to remain anonymous if they choose, and allowing for leave to be taken to recover from mental illness are going to have the most impact in increasing the social acceptance of mental health.
 
 ##Introduction
 
@@ -30,7 +30,7 @@ The data in this analysis comes from a survey conducted by Open Sourcing Mental 
 
 ##Related Work - A description of previous papers or projects related to your project.
 
-The study and impact of mental health awareness has been particularly prevalent in recent years. Researchers have found it interesting to study the associations between common mental disorders and workplace productivity. "Mental health and the workplace: issues for developing countries" (Chopra) is a paper that highlights the necessity of providing mental health benefits and leniency of time off/leave for those suffering from mental health illness in developing countries. While the USA and other developed countries have been working to better address mental health concerns, developing countries are still learning how to motivate and encourage their employees to be comfortable enough to talk about mental health conditions that are increasingly common in today's globalized and high-pressure environments. Further, supporting research highlighted in the paper (Chopra) suggests that "the odds of absenteeism due to health reasons [are] twice as high for employees with depressive symptoms." Therefore, it is important to highlight the direct and inverse correlation of employee well-being to the ability/productivity to work. 
+The study and impact of mental health awareness has been particularly prevalent in recent years. Researchers have found it interesting to study the associations between common mental disorders and workplace productivity. "Mental health and the workplace: issues for developing countries" (Chopra) is a paper that highlights the necessity of providing mental health benefits and leniency of time off/leave for those suffering from mental health illness in developing countries. While the USA and other developed countries have been working to better address mental health concerns, developing countries are still learning how to motivate and encourage their employees to be comfortable enough to talk about mental health conditions that are increasingly common in today's globalized and high-pressure environments. Further, supporting research highlighted in Chopra's paper suggests that "the odds of absenteeism due to health reasons [are] twice as high for employees with depressive symptoms." Therefore, it is important to highlight the direct and inverse correlation of employee well-being to the ability/productivity to work. 
 
 Other papers, like "The "Work" of the Workplace Mental Health" (Malachowski) have studied and investigated the impact of mental health on productivity in the workplace. An ethnographic study based in Ontario, looked at employees work of managing and negotiating episodes of depression, managers administrative work of maintaining privacy and confidentiality, and the administrative work of authorizing illness. The lack of awareness and inadequate training provided to managers to support mental health is one of the reasons why many workplaces fail to establish a socially acceptable and open illness culture. Malachowski summarizes advocacy efforts to facilitate organization and policy changes to enhance services and support for employees in the workplace.
 
@@ -39,13 +39,13 @@ These works have helped us understand the direction that researchers are going f
 ##Methods - A detailed explanation of the techniques and algorithms you used to solve the problem.
 
 ###Data Cleaning
-When we originally procured the data, the first thing we did was trim responses out to just the ones we needed. There was an area for comments by the respondant that we removed, and we also removed country and state level data because of the large number of non responses. We had hoped to continue using age as a covaritate, but there were also a large number of non responses as well as responses that didn't make sense (extremely high numbers, negative values, and extremely small numbers).
+When we originally procured the data, we first trimmed responses after identifying the columns needed. We removed comments by the respondant because they were inconsistent types of responses through the rows, country and state level data because of the large number of non responses, and age because there appeared to be a mistake during data collection and we found ages nonsensical ages of -1726 through 1e+11 years. 
 
 We then went about encoding all of the remaining responses into numeric values. We did this so we could easily calculate our outcomes of interest and run regressions of the data (Figure 1).
 
-We also decided to coerce some responses. These desicions were context based, for example, there were NA responses to the 'Are you self employed?' question. Because there were only about 10 non responses, we determined that these respondants were NOT self employed, because they indicated working at large companies in the 'How many employees does your company have?' question. Some questions, for example, 'Has your employer ever discussed mental health as part of an employee wellness program?' had the responses of 'yes', 'no', and 'don't know'. Due to the nature of the question, we were able to encode the 'dont' know' responses as 'no' responses, because if you had never experienced a mental health dicussion then your response could equally be no or don't know.
+We also decided to coerce some responses. These desicions were context based, for example, there were NA responses to the 'Are you self employed?' question. Because there were only about 10 non responses, we determined that these respondants were NOT self employed, because they indicated working at large companies in the 'How many employees does your company have?' question. Some questions, for example, 'Has your employer ever discussed mental health as part of an employee wellness program?' had the responses of 'yes', 'no', and 'don't know'. Due to the nature of the question, we were able to encode the 'don't know' responses as 'no' responses, because if you had never experienced a mental health dicussion then your response could equally be no or don't know.
 
-Finally, we were able to split our original dataset into two subsets for exploration. One of the questions in the survey that stood out to us was 'If you have a mental illness, to what extent would you say it has interfered with your work?' We found this interesting because no where in the survey does it ask directly if a participant has a mental illness, but this question is prety revealing. If one answered it, they likely had a mental illness, and this allowed us to split the set into those who were suffering from mental illness and those who were not.
+Finally, we were able to split our original dataset into two subsets for exploration. One of the questions in the survey that stood out to us was 'If you have a mental illness, to what extent would you say it has interfered with your work?' We found this interesting because no where in the survey does it ask directly if a participant has a mental illness, but this question is pretty revealing. If one answered it, they likely had a mental illness, and this allowed us to split the set into those who were suffering from mental illness and those who were not.
 
 ###Calculating the Outcomes of Interest
 
@@ -53,11 +53,11 @@ We calculated a binary outcome to represent the social acceptance, ease of commu
 
 ###The Model
 
-For this project we decided to do a log regression on several combinations of covariates for each outcome of interest, using the full dataset as our background for data. We decided not to use the subsets of having a mental illness vs not having a mental illness because our recommendatoins shoudl work for all employees, because those who do not have an illness now might develop one later, and those suffering now may not need the resources forever. For this analysis it was not critical for us to select a p value threshold because we were looking at the effects of both singular covariates as well as combinations, but we did generally tend towards values below 0.05. In addition to examining the relative values of the p values we also checked the goodness of fit of the model on an ROC curve. Our final model choices were based on a combination of contextual choices (what covariates intuitively work well together), the goodness of fit of the ROC curve, and then the resulting p values from the model.
+For this project we decided to do a log regression on several combinations of covariates for each outcome of interest, using the full dataset as our background for data. We decided not to use the subsets of having a mental illness vs not having a mental illness because our recommendations should work for all employees, because those who do not have an illness now might develop one later, and those suffering now may not need the resources forever. For this analysis it was not critical for us to select a p-value threshold because we were looking at the effects of both singular covariates as well as combinations, but we did generally trend towards values below 0.05. In addition to examining the relative values of the p-values we also checked the goodness of fit of the model on an ROC curve. Our final model choices were based on a combination of contextual choices (what covariates intuitively work well together), the goodness of fit of the ROC curve, and then the resulting p-values from the model.
 
 ###The Technique
 
-As stated previously, our final models of choice relied on several factors, including context. This meant that instead of streamlining the process of finding the lowest p value combinations/best ROC curve fit for each outcome of interest by writing a program to do it, we decided to work through combinations by hand and consider the implications of each. For example, gender seemed to have a large influence on the outcome of interest, but we couldn't very well suggest that each office become entirely female. Our goal was to provide concrete recommendations based on the data, and for us that required taking context into consideration for each covariate. This meant that we developed a tool to explore the data, the p values and the goodness of fit of the model. You can see a screenshot of the tool in Figure 3, and look at the site [here](https://rosemerryberry.shinyapps.io/mental-health2/). 
+As stated previously, our final models of choice relied on several factors, including context. This meant that instead of streamlining the process of finding the lowest p-value combinations/best ROC curve fit for each outcome of interest by writing a program to do it, we decided to work through combinations by hand and consider the implications of each. For example, gender seemed to have a large influence on the outcome of interest, but we couldn't very well suggest that each office become entirely female. Our goal was to provide concrete recommendations based on the data, and for us that required taking context into consideration for each covariate. This meant that we developed a tool to explore the data, the p-values and the goodness of fit of the model. You can see a screenshot of the tool in Figure 3, and look at the site [here](https://rosemerryberry.shinyapps.io/mental-health2/). 
 
 ##Results - The major insights resulting from your research.
 
