--- a/final_paper.Rmd
+++ b/final_paper.Rmd
@@ -93,9 +93,9 @@ As a whole, we do believe our recommendations come from a data driven analysis a
 
 ##Works Cited
 
-Chopra, Prem. ???Mental Health and the Workplace: Issues for Developing Countries.??? International Journal of Mental Health Systems 3 (2009): 4. PMC. Web. 11 Mar. 2018.
+Chopra, Prem. *Mental Health and the Workplace: Issues for Developing Countries.* International Journal of Mental Health Systems 3 (2009): 4. PMC. Web. 11 Mar. 2018.
 
-Malachowski, Cindy K., et al. ???The ???Work??? of Workplace Mental Health.??? Society and Mental Health, vol. 6, no. 3, 2016, pp. 207???222., doi:10.1177/2156869316642265.
+Malachowski, Cindy K., et al. *The "Work" of Workplace Mental Health.* Society and Mental Health, vol. 6, no. 3, 2016, pp. 207222., doi:10.1177/2156869316642265.
 
 "Mental Health By The Numbers." NAMI: National Alliance on Mental Illness, National Alliance on Mental Illness, www.nami.org/learn-more/mental-health-by-the-numbers.   
 
